# Doubler

./: .gitignore  README.md  pool_reward.cpp
v1/: pool_dbr.cpp  pool_dbr_v2.cpp
v2/: pool_dbr.cpp  pool_profit.cpp  pool_reward.cpp  pool_withdraw_v1.cpp  pool_withdraw_v2.cpp  special_reward_pool.cpp
v3/: CMakeLists.txt  main.cpp  pool.yaml
v3/Config/: config.h
v3/Pool/: Pool.cpp  Pool.h
v3/Strategy/: Strategy.cpp  Strategy.h
v3/User/: User.cpp  User.h
v3/example/: example_strategy.cpp  example_strategy2.cpp
